<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.learningandroid.rajesh.moviesapp1.activity.MoviePreferencesActivity">
    <item
        android:id="@+id/movie_sorting_preference_menu"
        android:orderInCategory="100"
        android:title="@string/movie_sorting_preference_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/movie_sorting_menu"
        android:title="@string/movie_sorting_menu"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/grp_sort_by"
                android:checkableBehavior="single"
                android:enabled="true"
                android:title="@string/sort_movies_by"
                app:showAsAction="always">
                <item
                    android:id="@+id/popular"
                    android:checked="true"
                    android:title="@string/most_popular" />
                <item
                    android:id="@+id/highest_rating"
                    android:title="@string/highest_rated" />
            </group>
        </menu>
    </item>

</menu>
