<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    android:scrollbarStyle="outsideOverlay"
    tools:context="com.learningandroid.rajesh.moviesapp1.fragment.MovieDetailActivityFragment">

    <TextView
        android:id="@+id/movie_name_heading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/movie_desc_activity_height"
        android:background="@color/accent_material_dark"
        android:gravity="center_vertical"
        android:text="@string/hello_world"
        android:paddingLeft="@dimen/movie_desc_activity_text_padding_left"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/movie_detail_image"
        android:layout_width="@dimen/image_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/movie_name_heading"
        android:adjustViewBounds="true"
        android:contentDescription="@string/movie_poster"
        android:src="@drawable/movie_trailer" />

    <TextView
        android:id="@+id/movie_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_name_heading"
        android:layout_marginLeft="@dimen/movie_desc_activity_middle_text_left_margin"
        android:layout_marginTop="@dimen/movie_desc_activty_middle_text_top_margin"
        android:layout_toRightOf="@+id/movie_detail_image"
        android:text="@string/dummy_movie_release_date"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/movie_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_release_date"
        android:layout_marginLeft="@dimen/movie_desc_activity_middle_text_left_margin"
        android:layout_marginTop="@dimen/movie_desc_activty_middle_text_general_margin"
        android:layout_toRightOf="@+id/movie_detail_image"
        android:text="@string/dummy_movie_duration"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/movie_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_duration"
        android:layout_marginLeft="@dimen/movie_desc_activity_middle_text_left_margin"
        android:layout_marginTop="@dimen/movie_desc_activty_middle_text_general_margin"
        android:layout_toRightOf="@+id/movie_detail_image"
        android:text="@string/movie_dummy_rating"
        android:textSize="15sp" />

    <Button
        android:id="@+id/movie_button_favorite"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_rating"
        android:layout_marginLeft="@dimen/movie_desc_activity_middle_text_left_margin"
        android:layout_marginTop="@dimen/movie_desc_activty_middle_text_general_margin"
        android:layout_toRightOf="@+id/movie_detail_image"
        android:text="@string/movie_button_label" />


        <TextView
            android:id="@+id/movie_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_desc_activty_middle_text_general_margin"
            android:layout_below="@+id/movie_detail_image"

            android:text="@string/dummy_movie_description"
            android:textSize="@dimen/movie_desc_activity_overview_text_size" />


</RelativeLayout>
</ScrollView>